--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,20 @@ body {
   padding-bottom: 300px;
 }
 
-
 #header {
   background-color: rgb(20, 20, 30);
   float: left;
   width: 100%;
   padding: 2% 1% 2%;
-  font-size: 3vw;
+  margin-top: 10px;
+  font-size: 26px;
   font-weight: bold;
   text-align: center;
   user-select: none;
+  visibility: visible;
 }
+
+
 
 #navBar {
   background-color: rgb(30, 30, 40);
@@ -81,7 +84,7 @@ body {
   height: auto;
   width: 33%;
   background-color: rgb(30, 30, 40);
-  font-size: 2vh;
+  font-size: 18px;
 }
 
 #listContents p {
@@ -96,7 +99,9 @@ body {
 }
 
 #CNL {
-  height: 50vh;
+  height: 30vh;
+  margin-top: 5%;
+  padding-bottom: 5%;
   float: left;
 }
 
@@ -146,9 +151,30 @@ body {
   padding-top: 3%;
   text-align: center;
   font-weight: bold;
-  font-size: 1.8vh;
+  font-size: 18px;
   user-select: none;
   cursor: pointer;
+}
+
+#importExport {
+  float: left;
+  padding-bottom: 3%;
+}
+
+#importExport textarea {
+  margin: 1% 5% 1%;
+  width: 90%;
+  background-color: white;
+  border: none;
+  height: 200px;
+  color: black;
+  padding-top: 0;
+  padding-left: 0;
+}
+
+#importExport .button2 {
+  width: 48%;
+  margin: 1% 1% 3%;
 }
 
 #help {
@@ -170,7 +196,7 @@ body {
   padding: 2%;
   border-radius: 6px;
   float: left;
-  font-size: 2vh;
+  font-size: 20px;
   font-weight: bold;
   user-select: none;
   cursor: pointer;
@@ -186,7 +212,7 @@ body {
   background-color: rgb(20, 20, 30);
   padding: 7% 4% 3.5%;
   margin-bottom: 3%;
-  font-size: 3vh;
+  font-size: 28px;
   font-weight: bold;
   position: relative;
   top: 0;
@@ -202,12 +228,17 @@ body {
 }
 
 #randomization {
-  height: 60vh;
+  height: auto;
   width: 95%;
   margin: auto;
   margin-top: 5%;
   border-bottom: 15px solid rgb(20, 20, 30);
   padding: 5%;
+  padding-bottom: 2%;
+}
+
+#randomization .button2 {
+  width: 30.5%;
 }
 
 #answer {
@@ -276,9 +307,9 @@ body {
 }
 
 .button2 {
-  float: left;
-  height: 8vh;
-  width: 30%;
+  display: inline-block;
+  height: auto;
+  width: 29%;
   margin: 2% 1% 2%;
   background-color: rgb(30, 30, 40);
   border: 2px solid white;
@@ -291,3 +322,60 @@ body {
   text-align: center;
   padding-top: 1%;
 }
+
+.button3 {
+  display: inline-block;
+  height: auto;
+  width: 22%;
+  margin: 2% 1% 2%;
+  background-color: rgb(30, 30, 40);
+  border: 2px solid white;
+  border-radius: 8px;
+  user-select: none;
+  cursor: pointer;
+  padding: 2% 3% 2%;
+  font-size: 16px;
+  text-align: center;
+  padding-top: 1%;
+}
+
+#pNotesBG {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background-color: rgb(0, 0, 0, 0.8)
+}
+
+#pNotesBG .modal {
+  width: 50%;
+  height: 600px;
+  opacity: 1;
+  z-index: 11;
+  margin: 3% 25% 10%;
+}
+
+#pNotesBG .modal .header {
+  padding: 3%;
+  font-size: 28px;
+  font-weight: bold;
+  user-select: none;
+}
+
+#pNotesP {
+  background-color: rgb(30, 30, 40);
+  white-space: pre-line;
+  width: 90%;
+  height: 400px;
+  margin: 2% 5% 0;
+  padding: 2% 3% 10%;
+  overflow-y: scroll;
+}
+
+ #pNotesExit {
+   margin-left: 8%;
+ }
